# CP_Series_Solutions

./: README.md
CP3/: CMakeLists.txt  draft  notes
CP3/1.3.3/: 00119_Greedy_Gift_Givers.cpp  00272_TEX_Quotes.cpp  00573_The_Snail.cpp  00621_Secret_Research.cpp  00661_Blowing_Fuses.cpp  01124_Celebrity_Jeopardy.cpp  10114_Loansome_Car_Buyer.cpp  10141_Request_for_Proposal.cpp  10300_Ecological_Premium.cpp  10324_Zeros_and_Ones.cpp  10424_Love_Calculator.cpp  10550_Combination_Lock.cpp  10919_Prerequisites.cpp  10963_The_Swallowing_Ground.cpp  11044_Searching_for_Nessy.cpp  11172_Relational_Operator.cpp  11332_Summing_Digits.cpp  11364_Parking.cpp  11498_Division_of_Nlogonia.cpp  11507_Bender_Problem.cpp  11547_Automatic_Answer.cpp  11559_Event_Planning.cpp  11586_Train_Tracks.cpp  11661_Burger_Time.cpp  11679_Subprime.cpp  11683_Laser_Sculpture.cpp  11687_Digits.cpp  11727_Cost_Cutting.cpp  11764_Jumping_Mario.cpp  11799_Horror_Dash.cpp  11942_Lumberjack_Sequencing.cpp  11956_Brainfuck.cpp  12015_Google_is_Feeling_Lucky.cpp  12157_Tariff_Plan.cpp  12250_Language_Detection.cpp  12279_Emoogle_Balance.cpp  12289_One_Two_Three.cpp  12372_Packing_for_Holiday.cpp  12403_Save_Setu.cpp  12468_Zapping.cpp  (+4 more)
CP3/1.4/: 00114_Simulation_Wizardry.cpp  00139_Telephone_Tangles.cpp  00141_The_Spot_Game.cpp  00144_Student_Grants.cpp  00145_Gondwanaland.cpp  00148_Anagram_Checker.cpp  00156_Ananagrams.cpp  00161_Traffic_Lights.cpp  00162_Beggar_My_Neighbour.cpp  00170_Clock_Patience.cpp  00187_Transaction_Processing.cpp  00195_Anagram.cpp  00214_Code_Generation.cpp  00220_Othello.cpp  00227_Puzzle.cpp  00232_Crossword_Answers.cpp  00255_Correct_Move.cpp  00278_Chess.cpp  00300_Maya_Calendar.cpp  00333_Recognizing_Good_ISBNs.cpp  00335_Processing_MX_Records.cpp  00337_Interpreting_Ctrl_Sequences.cpp  00339_SameGame_Simulation.cpp  00340_Master_Mind_Hints.cpp  00346_Getting_Chorded.cpp  00349_Transferable_Voting.cpp  00353_Pesky_Palindromes.cpp  00362_18000_Seconds_Remaining.cpp  00379_HiQ.cpp  00381_Making_the_Grade.cpp  00401_Palindromes.cpp  00403_Postscript.cpp  00405_Message_Routing.cpp  00447_Population_Explosion.cpp  00448_OOPS.cpp  00449_Majoring_in_Scales.cpp  00454_Anagrams.cpp  00457_Linear_Cellular.cpp  00462_Bridge_Hand_Evaluator.cpp  00489_Hangman_Judge.cpp  (+85 more)
CP3/2.2/: 00101_The_Blocks_Problem.cpp  00123_Searching_Quickly.cpp  00127_Accordian_Patience.cpp  00146_ID_Codes.cpp  00230_Borrowers.cpp  00394_Mapmaker.cpp  00400_Unix_ls.cpp  00414_Machined_Surfaces.cpp  00434_Matty_Blocks.cpp  00450_Little_Black_Book.cpp  00466_Mirror_Mirror.cpp  00467_Synching_Signals.cpp  00482_Permutation_Arrays.cpp  00514_Rails.cpp  00540_Team_Queue.cpp  00541_Error_Correction.cpp  00591_Box_of_Bricks.cpp  00594_One_Two_Three_Little_Endians.cpp  00665_False_coin.cpp  00700_Date_Bugs.cpp  00732_Anagrams_by_Stack.cpp  00755_487_3279.cpp  00790_Head_Judge_Headache.cpp  00855_Lunch_in_Grid_City.cpp  01062_Containers.cpp  01209_Wordfish.cpp  01241_Jollybee_Tournament.cpp  10016_Flip_Flop_Squarelotron.cpp  10038_Jolly_Jumpers.cpp  10050_Hartals.cpp  10057_A_Mid_Summer_Night_Dream.cpp  10107_What_is_the_Median.cpp  10172_The_Lonesome_Cargo_Distributor.cpp  10194_Football.cpp  10258_Contest_Scoreboard.cpp  10260_Soundex.cpp  10264_The_Most_Potent_Corner.cpp  10698_Football_Sort.cpp  10703_Free_Spots.cpp  10855_Rotated_Squares.cpp  (+38 more)
CP3/3.2/: 00102_Ecological_Bin_Packing.cpp
