cmake_minimum_required( VERSION 3.13 )
project( Competitive_Programming_3 )

set( CMAKE_CXX_STANDARD 17 )

# find_library( LIBSTDCXX NAMES stdc++ )

# add_compile_options( -stdlib=libstdc++ )

# add_executable(00272_TEX_Quotes 1.3.3/00272_TEX_Quotes.cpp)
# add_executable(01124_Celebrity_Jeopardy 1.3.3/01124_Celebrity_Jeopardy.cpp)
# add_executable(10550_Combination_Lock 1.3.3/10550_Combination_Lock.cpp)
# add_executable(11044_Searching_for_Nessy 1.3.3/11044_Searching_for_Nessy.cpp)
# add_executable(11172_Relational_Operator 1.3.3/11172_Relational_Operator.cpp)
# add_executable(11364_Parking 1.3.3/11364_Parking.cpp)
# add_executable(11498_Division_of_Nlogonia 1.3.3/11498_Division_of_Nlogonia.cpp)
# add_executable(11547_Automatic_Answer 1.3.3/11547_Automatic_Answer.cpp)
# add_executable(11727_Cost_Cutting 1.3.3/11727_Cost_Cutting.cpp)
# add_executable(12250_Language_Detection 1.3.3/12250_Language_Detection.cpp)
# add_executable(12279_Emoogle_Balance 1.3.3/12279_Emoogle_Balance.cpp)
# add_executable(12289_One_Two_Three 1.3.3/12289_One_Two_Three.cpp)
# add_executable(12372_Packing_for_Holiday 1.3.3/12372_Packing_for_Holiday.cpp)
# add_executable(12403_Save_Setu 1.3.3/12403_Save_Setu.cpp)
# add_executable(12577_Hajj_e_Akbar 1.3.3/12577_Hajj_e_Akbar.cpp)
# add_executable(00621_Secret_Research 1.3.3/00621_Secret_Research.cpp)
# add_executable(10114_Loansome_Car_Buyer 1.3.3/10114_Loansome_Car_Buyer.cpp)
# add_executable(10300_Ecological_Premium 1.3.3/10300_Ecological_Premium.cpp)
# add_executable(10963_The_Swallowing_Ground 1.3.3/10963_The_Swallowing_Ground.cpp)
# add_executable(11332_Summing_Digits 1.3.3/11332_Summing_Digits.cpp)
# add_executable(11559_Event_Planning 1.3.3/11559_Event_Planning.cpp)
# add_executable(11679_Subprime 1.3.3/11679_Subprime.cpp)
# add_executable(11764_Jumping_Mario 1.3.3/11764_Jumping_Mario.cpp)
# add_executable(11799_Horror_Dash 1.3.3/11799_Horror_Dash.cpp)
# add_executable(11942_Lumberjack_Sequencing 1.3.3/11942_Lumberjack_Sequencing.cpp)
# add_executable(12015_Google_is_Feeling_Lucky 1.3.3/12015_Google_is_Feeling_Lucky.cpp)
# add_executable(12157_Tariff_Plan 1.3.3/12157_Tariff_Plan.cpp)
# add_executable(12468_Zapping 1.3.3/12468_Zapping.cpp)
# add_executable(12503_Robot_Instructions 1.3.3/12503_Robot_Instructions.cpp)
# add_executable(12554_Special_Song 1.3.3/12554_Special_Song.cpp)
# add_executable(00119_Greedy_Gift_Givers 1.3.3/00119_Greedy_Gift_Givers.cpp)
# add_executable(00573_The_Snail 1.3.3/00573_The_Snail.cpp)
# add_executable(00661_Blowing_Fuses 1.3.3/00661_Blowing_Fuses.cpp)
# add_executable(10141_Request_for_Proposal 1.3.3/10141_Request_for_Proposal.cpp)
# add_executable(10324_Zeros_and_Ones 1.3.3/10324_Zeros_and_Ones.cpp)
# add_executable(10424_Love_Calculator 1.3.3/10424_Love_Calculator.cpp)
# add_executable(10919_Prerequisites 1.3.3/10919_Prerequisites.cpp)
# add_executable(11507_Bender_Problem 1.3.3/11507_Bender_Problem.cpp)
# add_executable(11586_Train_Tracks 1.3.3/11586_Train_Tracks.cpp)
# add_executable(11661_Burger_Time 1.3.3/11661_Burger_Time.cpp)
# add_executable(11683_Laser_Sculpture 1.3.3/11683_Laser_Sculpture.cpp)
# add_executable(11687_Digits 1.3.3/11687_Digits.cpp)
# add_executable(11956_Brainfuck 1.3.3/11956_Brainfuck.cpp)
# add_executable(12478_Hardest_Problem_Ever 1.3.3/12478_Hardest_Problem_Ever.cpp)

# add_executable(00162_Beggar_My_Neighbour 1.4/00162_Beggar_My_Neighbour.cpp)
# add_executable(00462_Bridge_Hand_Evaluator 1.4/00462_Bridge_Hand_Evaluator.cpp)
# add_executable(00555_Bridge_Hands 1.4/00555_Bridge_Hands.cpp)
# add_executable(10205_Stack_em_Up 1.4/10205_Stack_em_Up.cpp)
# add_executable(10315_Poker_Hands 1.4/10315_Poker_Hands.cpp)
# add_executable(10646_What_is_the_Card 1.4/10646_What_is_the_Card.cpp)
# add_executable(11225_Tarot_Scores 1.4/11225_Tarot_Scores.cpp)
# add_executable(11678_Exchanging_Cards 1.4/11678_Exchanging_Cards.cpp)
# add_executable(12247_Jollo 1.4/12247_Jollo.cpp)
# add_executable(00255_Correct_Move 1.4/00255_Correct_Move.cpp)
# add_executable(00278_Chess 1.4/00278_Chess.cpp)
# add_executable(00696_How_Many_Knights 1.4/00696_How_Many_Knights.cpp)
# add_executable(10196_Check_The_Check 1.4/10196_Check_The_Check.cpp)
# add_executable(10284_Chessboard_in_FEN 1.4/10284_Chessboard_in_FEN.cpp)
# add_executable(10849_Move_the_bishop 1.4/10849_Move_the_bishop.cpp)
# add_executable(11494_Queen 1.4/11494_Queen.cpp)
# add_executable(00340_Master_Mind_Hints 1.4/00340_Master_Mind_Hints.cpp)
# add_executable(00489_Hangman_Judge 1.4/00489_Hangman_Judge.cpp)
# add_executable(00947_Master_Mind_Helper 1.4/00947_Master_Mind_Helper.cpp)
# add_executable(10189_Minesweeper 1.4/10189_Minesweeper.cpp)
# add_executable(10279_Mine_Sweeper 1.4/10279_Mine_Sweeper.cpp)
# add_executable(10409_Die_Game 1.4/10409_Die_Game.cpp)
# add_executable(10530_Guessing_Game 1.4/10530_Guessing_Game.cpp)
# add_executable(11459_Snakes_and_Ladders 1.4/11459_Snakes_and_Ladders.cpp)
# add_executable(12239_Bingo 1.4/12239_Bingo.cpp)
# add_executable(00339_SameGame_Simulation 1.4/00339_SameGame_Simulation.cpp)
# add_executable(00114_Simulation_Wizardry 1.4/00114_Simulation_Wizardry.cpp)
# add_executable(00141_The_Spot_Game 1.4/00141_The_Spot_Game.cpp)
# add_executable(00220_Othello 1.4/00220_Othello.cpp)
# add_executable(00227_Puzzle 1.4/00227_Puzzle.cpp)
# add_executable(00232_Crossword_Answers 1.4/00232_Crossword_Answers.cpp)
# add_executable(00379_HiQ 1.4/00379_HiQ.cpp)
# add_executable(00584_Bowling 1.4/00584_Bowling.cpp)
# add_executable(00647_Chutes_and_Ladders 1.4/00647_Chutes_and_Ladders.cpp)
# add_executable(10363_Tic_Tac_Toe 1.4/10363_Tic_Tac_Toe.cpp)
# add_executable(10443_Rock_Scissors_Paper 1.4/10443_Rock_Scissors_Paper.cpp)
# add_executable(10813_Traditional_BINGO 1.4/10813_Traditional_BINGO.cpp)
# add_executable(10903_RPS_Tournament 1.4/10903_RPS_Tournament.cpp)
# add_executable(00353_Pesky_Palindromes 1.4/00353_Pesky_Palindromes.cpp)
# add_executable(00401_Palindromes 1.4/00401_Palindromes.cpp)
# add_executable(10018_Reverse_And_Add 1.4/10018_Reverse_And_Add.cpp)
# add_executable(11221_Magic_Square_Palindromes 1.4/11221_Magic_Square_Palindromes.cpp)
# add_executable(11309_Counting_Chaos 1.4/11309_Counting_Chaos.cpp)
# add_executable(00148_Anagram_Checker 1.4/00148_Anagram_Checker.cpp)
# add_executable(00156_Ananagrams 1.4/00156_Ananagrams.cpp)
# add_executable(00195_Anagram 1.4/00195_Anagram.cpp)
# add_executable(00454_Anagrams 1.4/00454_Anagrams.cpp)
# add_executable(00630_Anagrams 1.4/00630_Anagrams.cpp)
# add_executable(00642_Word_Amalgamation 1.4/00642_Word_Amalgamation.cpp)
# add_executable(10098_Generating_Fast 1.4/10098_Generating_Fast.cpp)
# add_executable(00161_Traffic_Lights 1.4/00161_Traffic_Lights.cpp)
# add_executable(00187_Transaction_Processing 1.4/00187_Transaction_Processing.cpp)
# add_executable(00362_18000_Seconds_Remaining 1.4/00362_18000_Seconds_Remaining.cpp)
# add_executable(00637_Booklet_Printing 1.4/00637_Booklet_Printing.cpp)
# add_executable(00857_Quantiser 1.4/00857_Quantiser.cpp)
# add_executable(10082_WERTYU 1.4/10082_WERTYU.cpp)
# add_executable(10191_Longest_Nap 1.4/10191_Longest_Nap.cpp)
# add_executable(10528_Major_Scales 1.4/10528_Major_Scales.cpp)
# add_executable(10554_Calories_From_Fat 1.4/10554_Calories_From_Fat.cpp)
# add_executable(10812_Beat_the_Spread 1.4/10812_Beat_the_Spread.cpp)
# add_executable(11530_SMS_Typing 1.4/11530_SMS_Typing.cpp)
# add_executable(11945_Financial_Management 1.4/11945_Financial_Management.cpp)
# add_executable(11984_Change_Unit 1.4/11984_Change_Unit.cpp)
# add_executable(12195_Jingle_Composing 1.4/12195_Jingle_Composing.cpp)
# add_executable(12555_Baby_Me 1.4/12555_Baby_Me.cpp)
# add_executable(00139_Telephone_Tangles 1.4/00139_Telephone_Tangles.cpp)
# add_executable(00145_Gondwanaland 1.4/00145_Gondwanaland.cpp)
# add_executable(00333_Recognizing_Good_ISBNs 1.4/00333_Recognizing_Good_ISBNs.cpp)
# add_executable(00346_Getting_Chorded 1.4/00346_Getting_Chorded.cpp)
# add_executable(00403_Postscript 1.4/00403_Postscript.cpp)
# add_executable(00447_Population_Explosion 1.4/00447_Population_Explosion.cpp)
# add_executable(00448_OOPS 1.4/00448_OOPS.cpp)
# add_executable(00449_Majoring_in_Scales 1.4/00449_Majoring_in_Scales.cpp)
# add_executable(00457_Linear_Cellular 1.4/00457_Linear_Cellular.cpp)
# add_executable(00538_Balancing_Bank_Accounts 1.4/00538_Balancing_Bank_Accounts.cpp)
# add_executable(00608_Counterfeit_Dollar 1.4/00608_Counterfeit_Dollar.cpp)
# add_executable(00706_LC_Display 1.4/00706_LC_Display.cpp)
# add_executable(01061_Consanguine 1.4/01061_Consanguine.cpp)
# add_executable(10415_Eb_Alto_Saxophone_Player 1.4/10415_Eb_Alto_Saxophone_Player.cpp)
# add_executable(10659_Fitting_Text_into_Slides 1.4/10659_Fitting_Text_into_Slides.cpp)
# add_executable(11223_O_Dah_Dah_Dah 1.4/11223_O_Dah_Dah_Dah.cpp)
# add_executable(11743_Credit_Check 1.4/11743_Credit_Check.cpp)
# add_executable(12342_Tax_Calculator 1.4/12342_Tax_Calculator.cpp)
# add_executable(00170_Clock_Patience 1.4/00170_Clock_Patience.cpp)
# add_executable(00300_Maya_Calendar 1.4/00300_Maya_Calendar.cpp)
# add_executable(00579_ClockHands 1.4/00579_ClockHands.cpp)
# add_executable(10070_Leap_Year_Or_Not 1.4/10070_Leap_Year_Or_Not.cpp)
# add_executable(10339_Watching_Watches 1.4/10339_Watching_Watches.cpp)
# add_executable(10371_Time_Zones 1.4/10371_Time_Zones.cpp)
# add_executable(10683_The_Decadary_Watch 1.4/10683_The_Decadary_Watch.cpp)
# add_executable(11219_How_old_are_you 1.4/11219_How_old_are_you.cpp)
# add_executable(11650_Mirror_Clock 1.4/11650_Mirror_Clock.cpp)
# add_executable(11677_Alarm_Clock 1.4/11677_Alarm_Clock.cpp)
# add_executable(11958_Coming_Home 1.4/11958_Coming_Home.cpp)
# add_executable(12136_Schedule_of_Married_Man 1.4/12136_Schedule_of_Married_Man.cpp)
# add_executable(12439_February_29 1.4/12439_February_29.cpp)
# add_executable(12531_Hours_and_Minutes 1.4/12531_Hours_and_Minutes.cpp)
# add_executable(00144_Student_Grants 1.4/00144_Student_Grants.cpp)
# add_executable(00337_Interpreting_Ctrl_Sequences 1.4/00337_Interpreting_Ctrl_Sequences.cpp)
# add_executable(00214_Code_Generation 1.4/00214_Code_Generation.cpp)
# add_executable(00381_Making_the_Grade 1.4/00381_Making_the_Grade.cpp)
# add_executable(00335_Processing_MX_Records 1.4/00335_Processing_MX_Records.cpp)
# add_executable(00349_Transferable_Voting 1.4/00349_Transferable_Voting.cpp)
# add_executable(00405_Message_Routing 1.4/00405_Message_Routing.cpp)
# add_executable(00556_Amazing 1.4/00556_Amazing.cpp)
# add_executable(00603_Parking_Lot 1.4/00603_Parking_Lot.cpp)
# add_executable(00830_Shark 1.4/00830_Shark.cpp)
# add_executable(00945_Loading_Cargo_Ship 1.4/00945_Loading_Cargo_Ship.cpp)
# add_executable(10033_Interpreter 1.4/10033_Interpreter.cpp)
# add_executable(10134_AutoFish 1.4/10134_AutoFish.cpp)
# add_executable(10142_Australian_Voting 1.4/10142_Australian_Voting.cpp)
# add_executable(10188_Automated_Judge_Script 1.4/10188_Automated_Judge_Script.cpp)
# add_executable(10267_Graphical_Editor 1.4/10267_Graphical_Editor.cpp)
# add_executable(10961_Chasing_After_Don_Giovanni 1.4/10961_Chasing_After_Don_Giovanni.cpp)
# add_executable(11140_Little_Ali_Little_Brother 1.4/11140_Little_Ali_Little_Brother.cpp)
# add_executable(11717_Energy_Saving_Microcontroller 1.4/11717_Energy_Saving_Microcontroller.cpp)
# add_executable(12060_All_Integer_Average 1.4/12060_All_Integer_Average.cpp)
# add_executable(12085_Mobile_Casanova 1.4/12085_Mobile_Casanova.cpp)
# add_executable(12608_Garbage_Collection 1.4/12608_Garbage_Collection.cpp)

# add_executable(00230_Borrowers 2.2/00230_Borrowers.cpp)
# add_executable(00394_Mapmaker 2.2/00394_Mapmaker.cpp)
# add_executable(00414_Machined_Surfaces 2.2/00414_Machined_Surfaces.cpp)
# add_executable(00467_Synching_Signals 2.2/00467_Synching_Signals.cpp)
# add_executable(00482_Permutation_Arrays 2.2/00482_Permutation_Arrays.cpp)
# add_executable(00591_Box_of_Bricks 2.2/00591_Box_of_Bricks.cpp)
# add_executable(00665_False_coin 2.2/00665_False_coin.cpp)
# add_executable(00755_487_3279 2.2/00755_487_3279.cpp)
# add_executable(10038_Jolly_Jumpers 2.2/10038_Jolly_Jumpers.cpp)
# add_executable(10050_Hartals 2.2/10050_Hartals.cpp)
# add_executable(10260_Soundex 2.2/10260_Soundex.cpp)
# add_executable(10978_Lets_Play_Magic 2.2/10978_Lets_Play_Magic.cpp)
# add_executable(11093_Just_Finish_it_up 2.2/11093_Just_Finish_it_up.cpp)
# add_executable(11192_Group_Reverse 2.2/11192_Group_Reverse.cpp)
# add_executable(11222_Only_I_did_it 2.2/11222_Only_I_did_it.cpp)
# add_executable(11340_Newspaper 2.2/11340_Newspaper.cpp)
# add_executable(11496_Musical_Loop 2.2/11496_Musical_Loop.cpp)
# add_executable(11608_No_Problem 2.2/11608_No_Problem.cpp)
# add_executable(11850_Alaska 2.2/11850_Alaska.cpp)
# add_executable(12150_Pole_Position 2.2/12150_Pole_Position.cpp)
# add_executable(12356_Army_Buddies 2.2/12356_Army_Buddies.cpp)
# add_executable(00101_The_Blocks_Problem 2.2/00101_The_Blocks_Problem.cpp)
# add_executable(00434_Matty_Blocks 2.2/00434_Matty_Blocks.cpp)
# add_executable(00466_Mirror_Mirror 2.2/00466_Mirror_Mirror.cpp)
# add_executable(00541_Error_Correction 2.2/00541_Error_Correction.cpp)
# add_executable(10016_Flip_Flop_Squarelotron 2.2/10016_Flip_Flop_Squarelotron.cpp)
# add_executable(10703_Free_Spots 2.2/10703_Free_Spots.cpp)
# add_executable(10855_Rotated_Squares 2.2/10855_Rotated_Squares.cpp)
# add_executable(10920_Spiral_Tap 2.2/10920_Spiral_Tap.cpp)
# add_executable(11040_Add_Bricks_In_The_Wall 2.2/11040_Add_Bricks_In_The_Wall.cpp)
# add_executable(11349_Symmetric_Matrix 2.2/11349_Symmetric_Matrix.cpp)
# add_executable(11360_Have_Fun_With_Matrices 2.2/11360_Have_Fun_With_Matrices.cpp)
# add_executable(11581_Grid_Successors 2.2/11581_Grid_Successors.cpp)
# add_executable(11835_Formula_1 2.2/11835_Formula_1.cpp)
# add_executable(12187_Brothers 2.2/12187_Brothers.cpp)
# add_executable(12291_Polyomino_Composer 2.2/12291_Polyomino_Composer.cpp)
# add_executable(12398_NumPuzz_I 2.2/12398_NumPuzz_I.cpp)
# add_executable(00123_Searching_Quickly 2.2/00123_Searching_Quickly.cpp)
# add_executable(00146_ID_Codes 2.2/00146_ID_Codes.cpp)
# add_executable(00400_Unix_ls 2.2/00400_Unix_ls.cpp)
# add_executable(00450_Little_Black_Book 2.2/00450_Little_Black_Book.cpp)
# add_executable(00790_Head_Judge_Headache 2.2/00790_Head_Judge_Headache.cpp)
# add_executable(00855_Lunch_in_Grid_City 2.2/00855_Lunch_in_Grid_City.cpp)
# add_executable(01209_Wordfish 2.2/01209_Wordfish.cpp)
# add_executable(10057_A_Mid_Summer_Night_Dream 2.2/10057_A_Mid_Summer_Night_Dream.cpp)
# add_executable(10107_What_is_the_Median 2.2/10107_What_is_the_Median.cpp)
# add_executable(10194_Football 2.2/10194_Football.cpp)
# add_executable(10258_Contest_Scoreboard 2.2/10258_Contest_Scoreboard.cpp)
# add_executable(10698_Football_Sort 2.2/10698_Football_Sort.cpp)
# add_executable(10880_Colin_and_Ryan 2.2/10880_Colin_and_Ryan.cpp)
# add_executable(10905_Children_Game 2.2/10905_Children_Game.cpp)
# add_executable(11039_Building_Designing 2.2/11039_Building_Designing.cpp)
# add_executable(11321_Sort_Sort_And_Sort 2.2/11321_Sort_Sort_And_Sort.cpp)
# add_executable(11588_Image_Coding 2.2/11588_Image_Coding.cpp)
# add_executable(11777_Automate_the_Grades 2.2/11777_Automate_the_Grades.cpp)
# add_executable(11824_A_Minimum_Land_Price 2.2/11824_A_Minimum_Land_Price.cpp)
# add_executable(12541_Birthdates 2.2/12541_Birthdates.cpp)
# add_executable(00594_One_Two_Three_Little_Endians 2.2/00594_One_Two_Three_Little_Endians.cpp)
# add_executable(00700_Date_Bugs 2.2/00700_Date_Bugs.cpp)
# add_executable(01241_Jollybee_Tournament 2.2/01241_Jollybee_Tournament.cpp)
# add_executable(10264_The_Most_Potent_Corner 2.2/10264_The_Most_Potent_Corner.cpp)
# add_executable(11173_Grey_Codes 2.2/11173_Grey_Codes.cpp)
# add_executable(11760_Brother_Arif 2.2/11760_Brother_Arif.cpp)
# add_executable(11926_Multitasking 2.2/11926_Multitasking.cpp)
# add_executable(11933_Splitting_Numbers 2.2/11933_Splitting_Numbers.cpp)
# add_executable(11988_Broken_Keyboard 2.2/11988_Broken_Keyboard.cpp)
# add_executable(00127_Accordian_Patience 2.2/00127_Accordian_Patience.cpp)
# add_executable(00514_Rails 2.2/00514_Rails.cpp)
# add_executable(00732_Anagrams_by_Stack 2.2/00732_Anagrams_by_Stack.cpp)
# add_executable(01062_Containers 2.2/01062_Containers.cpp)
# add_executable(10858_Unique_Factorization 2.2/10858_Unique_Factorization.cpp)
# add_executable(00540_Team_Queue 2.2/00540_Team_Queue.cpp)
# add_executable(10172_The_Lonesome_Cargo_Distributor 2.2/10172_The_Lonesome_Cargo_Distributor.cpp)
# add_executable(10901_Ferry_Loading_III 2.2/10901_Ferry_Loading_III.cpp)
# add_executable(10935_Throwing_Cards_Away_I 2.2/10935_Throwing_Cards_Away_I.cpp)
# add_executable(11034_Ferry_Loading_IV 2.2/11034_Ferry_Loading_IV.cpp)
# add_executable(12100_Printer_Queue 2.2/12100_Printer_Queue.cpp)
add_executable(12207_That_is_Your_Queue 2.2/12207_That_is_Your_Queue.cpp)

# add_executable(00102_Ecological_Bin_Packing 3.2/00102_Ecological_Bin_Packing.cpp)

# add_executable(Main_00893_Y3K_Problem 1.4/Main_00893_Y3K_Problem.java)
# add_executable(Main_11356_Dates 1.4/Main_11356_Dates.java)
# add_executable(Main_11947_Cancer_or_Scorpio 1.4/Main_11947_Cancer_or_Scorpio.java)
# add_executable(Main_12019_Doom_Algorithm 1.4/Main_12019_Doom_Algorithm.java)
# add_executable(Main_12148_Electricity 1.4/Main_12148_Electricity.java)
